--- a/src/Pages/HomePage/HomePage.module.css
+++ b/src/Pages/HomePage/HomePage.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+  max-width: 1400px;
   position: relative;
   height: 100vh;
   margin: 0 auto;
@@ -54,7 +55,7 @@
 
 .titleAboveImages {
   position: absolute;
-  top: -75px; 
+  top: -50px; 
   width: 100%;
   transform: translateX(-50%);
   padding: 5px 10px;
