--- a/src/components/CamperList/CamperList.module.css
+++ b/src/components/CamperList/CamperList.module.css
@@ -1,11 +1,3 @@
-.wrapper {
-flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background-color: #f6f6f6;
-  padding: 20px;
-}
-
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -15,7 +7,30 @@ flex-direction: column;
   }
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+}
+
+.loadMoreBtn{
+  border: 1px solid rgba(71, 84, 103, 0.2);
+  border-radius: 200px;
+  padding: 16px 32px;
+  width: 145px;
+  height: 56px;
+}
+
+.loadMoreBtn:hover,
+.loadMoreBtn:focus{
+  border: 1px solid #e44848;
+}
+
+
 .infoWrapper {
+  width: 100%;
   animation: fadeIn 1s ease;
 }
 
