--- a/src/components/CamperListItem/CamperDetails/CamperDetails.module.css
+++ b/src/components/CamperListItem/CamperDetails/CamperDetails.module.css
@@ -1,93 +1,70 @@
 .details {
+  padding: 20px;
+  border-radius: 8px;
   width: 526px;
   height: 310px;
 }
 
-.description {
-  display: block;
-  line-height: normal;
-  line-break: auto;
-  height: 24px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-bottom: 24px;
-}
-
 .titleWrapper {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin-bottom: 8px;
 }
 
 .headerTwo {
-  width: 320px;
-  height: 38px;
-  display: inline-block;
-  font-size: 30px;
-  font-stretch: semi-condensed;
-  font-weight: 600;
-  margin-right: auto;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  padding-right: 20px;
+  font-size: 24px;
 }
 
-.headerPrice {
-  display: inline-block;
-  font-size: 30px;
-  font-weight: 600;
-  margin-right: 12px;
-}
 
 .favoriteButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background: none;
   border: none;
-  background-color: transparent;
+  cursor: pointer;
 }
 
-.favoriteButton:hover .svg,
-.favoriteButton:focus .svg {
-  stroke: var(--button);
+.favoriteButton > .svg {
+  fill: #fff;
+  stroke: #000;
 }
 
-.favoriteButton:active {
-  transform: scale(0.92);
-}
-
-.svg {
-  fill: white;
-  stroke: var(--main);
-  transition: fill 0.15s ease-in-out, stroke 0.15s ease-in-out;
-}
-
-.favoriteButton.active .svg {
-  fill: var(--button);
-  stroke: var(--button);
-}
-
-.svgStar {
-  fill: var(--rating);
-  margin-right: 4px;
-}
-
-.svgPointer {
-  fill: black;
-  margin-right: 4px;
+.favoriteButton.active > .svg {
+  fill: #ff0000; 
+  stroke:none;
 }
 
 .ratings {
   display: flex;
   align-items: center;
-  margin-bottom: 24px;
+  margin-top: 10px;
 }
 
 .reviewRank {
-  display: flex;
-  align-items: center;
-  text-decoration: underline;
-  margin-right: 16px;
+  margin-right: 30px;
+  margin-left: 5px;
+}
+
+.svgStar {
+  fill: #ffd700; 
+  margin-right: 5px;
+}
+
+.svgPointer {
+  fill: #3cb371; 
+  margin-right: 5px;
+}
+
+.location {
+  font-style: italic;
+}
+
+.description {
+  max-width: 350px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  white-space: normal;
 }
