--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,8 @@
   align-items: center;
   background-color: #f4f4f4;
   height: 80px;
-  padding: 0 20px;
+  padding: 0;
+  margin: 0;
 }
 
 .logoContainer {
@@ -17,6 +18,7 @@
 
 @media screen and (max-width: 1123px) {
   .navBarContainer {
+    max-width: 1123px;
     text-align: center;
     justify-content: center;
     position: absolute;
