--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,6 +1,7 @@
 .list {
   list-style: none;
   display: flex;
+  margin: 0;
 }
 
 .listItem {
@@ -43,4 +44,12 @@
   border-radius: 3px;
   background-color: red;
   transform: translateY(18px);
+}
+
+
+@media screen and (max-width: 800px) {
+  .list {
+    max-width: 800px;
+    margin-top: 30px;
+  }
 }
